# metodos-proyectos

./: Cargo.toml  build.rs  readme.md
src/: contar.c  contar.h  doubler.c  doubler.h  main.rs
