[package]
name = "proyecto1"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
egui = "0.22.0"
egui_extras = "0.22.0"
eframe = "0.22.0"
chrono = "0.4.26"



[build-dependencies]
cc = { version = "1.0", features = ["parallel"] }

